many minor fixes improved usability

--- a/templates/addItemStoreManager.html
+++ b/templates/addItemStoreManager.html
@@ -11,14 +11,15 @@
                             md-whiteframe="4">
 
                     <md-content flex="100" layout-padding ng-controller="LeftCtrl" style="padding: 0">
-                        <md-button ng-click="close()" class="md-primary" hide-gt-sm>
-                            Close Sidenav Left
-                        </md-button>
                         <a href="/#/" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>home</md-icon>
                             Home page
                         </a>
-                        <a href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
+                        <a access="ROLE_USER" hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="logout()">
+                            <md-icon>power_settings_new</md-icon>
+                            Logout
+                        </a>
+                        <a access="ROLE_ADMIN" href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
