--- a/templates/cartDialog.html
+++ b/templates/cartDialog.html
@@ -32,7 +32,7 @@
 
     <md-dialog-actions ng-show="cart.items.length > 0" layout="row" layout-align="end center"
                        style="padding-right: 15px; padding-top: 25px; padding-bottom: 15px">
-        <md-button class="md-raised">
+        <md-button ng-click="cancel()" class="md-raised">
             Continue shopping
             <md-icon>shopping_cart</md-icon>
         </md-button>
