--- a/templates/directives/itemCardShort.html
+++ b/templates/directives/itemCardShort.html
@@ -1,7 +1,7 @@
 <div class="item-card-container">
     <div layout="row" layout-align="space-between center">
         <div flex="33" flex-gt-md="10" layout-align="start center" style="padding: 10px;">
-            <a ng-href="/#/item/{{item.id}}">
+            <a ng-href="/#/item/{{item.id}}" ng-click="cancel()">
                 <div style="height: 100px" ng-style="{'background-image':'url({{item.photo}})'}"
                      class="item-card-image-container">
 
