--- a/templates/info.html
+++ b/templates/info.html
@@ -1,14 +1,14 @@
 <div layout="row" layout-align="center start">
     <div flex="100" flex-gt-xs="85" flex-gt-md="70" style="padding: 10px">
-        <div class="price teal-text" style="padding-bottom: 10px">
+        <h1 class="price teal-text" style="">
             About this project
-        </div>
-        <div style="font-size: 20px; padding-left: 25px">
+        </h1>
+        <p style="font-size: 20px; padding-left: 25px">
             This is my personal project I made during learning Angular.js
-        </div>
-        <div class="price teal-text" style="padding-bottom: 10px">
+        </p>
+        <h1 class="price teal-text" style="">
             Under the hood
-        </div>
+        </h1>
         <div layout="row" layout-align="space-around center">
 
             <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
@@ -43,9 +43,9 @@
             <div style="width: 150px; text-align: center">MySQL</div>
         </div>
 
-        <div class="price teal-text" style="padding-bottom: 10px">
+        <h1 class="price teal-text" style="">
             Tools used
-        </div>
+        </h1>
 
         <div layout="row" layout-align="space-around center">
 
@@ -76,5 +76,16 @@
             <div style="width: 150px; text-align: center">TeamCity</div>
             <div style="width: 150px; text-align: center">Git</div>
         </div>
+
+        <h1 class="price teal-text" style="">
+            GitHub
+        </h1>
+
+        <p style="font-size: 20px; padding-left: 25px">
+            The project is divided into two repositories. Backend is available at:
+            <a class="teal-text" href="https://github.com/TomOw/AllStore">AllStore</a>, and frontend is available here:
+            <a class="teal-text" href="https://github.com/TomOw/AllStoreGui">AllStoreGui</a>
+        </p>
+
     </div>
 </div>
