--- a/templates/storeManagerOrders.html
+++ b/templates/storeManagerOrders.html
@@ -18,14 +18,21 @@
                             <md-icon>home</md-icon>
                             Home page
                         </a>
-                        <a href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
+                        <a access="ROLE_USER" hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="logout()">
+                            <md-icon>power_settings_new</md-icon>
+                            Logout
+                        </a>
+                        <a access="ROLE_ADMIN" href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
-                        <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element"
-                           ng-click="showCart($event)">
+                        <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="showCart($event)">
                             <md-icon>shopping_basket</md-icon>
                             Cart
+                        </a>
+                        <a hide-gt-sm ng-href="/#/user/user" class="md-button md-ink-ripple side-nav-element" ng-click="">
+                            <md-icon ng-click="">person</md-icon>
+                            Your Profile
                         </a>
                         <md-divider></md-divider>
                         <a ng-click="showEditStoreDetailsDialog($event)" href="" class="md-button md-ink-ripple side-nav-element" ng-click="">
