--- a/templates/userOrders.html
+++ b/templates/userOrders.html
@@ -18,7 +18,11 @@
                             <md-icon>home</md-icon>
                             Home page
                         </a>
-                        <a href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
+                        <a access="ROLE_USER" hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="logout()">
+                            <md-icon>power_settings_new</md-icon>
+                            Logout
+                        </a>
+                        <a access="ROLE_ADMIN" href="/#/addItem" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
