--- a/templates/orderConfirm.html
+++ b/templates/orderConfirm.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-align="center start">
     <div flex="100" flex-gt-xs="85" flex-gt-md="70">
-        <div layout="column">
+        <div layout="column" style="padding: 8px">
             <div class="teal-text" style="padding-top: 10px; font-size: 40px; font-weight: 200">
                 Confirm Your order in {{cart.items[0].storeName}} store
             </div>
