--- a/templates/info.html
+++ b/templates/info.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-align="center start">
-    <div flex="100" flex-gt-xs="85" flex-gt-md="70" style="padding: 10px">
+    <div flex="100" flex-gt-xs="85" flex-gt-md="70" style="padding: 10px;">
         <h1 class="price teal-text" style="">
             About this project
         </h1>
@@ -86,6 +86,27 @@
             <a class="teal-text" href="https://github.com/TomOw/AllStore">AllStore</a>, and frontend is available here:
             <a class="teal-text" href="https://github.com/TomOw/AllStoreGui">AllStoreGui</a>
         </p>
+
+        <h1 class="price teal-text">
+            Sample login credentials
+        </h1>
+
+        <div style="font-size: 20px; padding-left: 25px">
+            With ordinary user privileges login : password
+
+            <ul>
+                <li>james : bond</li>
+                <li>user : user</li>
+                <li>aston : martin</li>
+                <li>james : bond</li>
+            </ul>
+
+        </div>
+
+        <div style="font-size: 20px; padding-left: 25px; padding-top: 25px; padding-bottom: 50px">
+            Store managers login and password are the same and constructed by template: manager + {name of the store}.<br>
+            e.g. store name: ETD, login: managerETD, password: managerETD.
+        </div>
 
     </div>
 </div>
