getting random FIX

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="center start">
     <div flex="100" flex-gt-xs="85" flex-gt-md="70">
 
-        <div layout="row">
+        <div layout="row" ng-init="getRandomItems()">
 
             <div layout="column">
                 <md-sidenav flex="100"
