more information at info page

--- a/templates/info.html
+++ b/templates/info.html
@@ -4,7 +4,10 @@
             About this project
         </h1>
         <p style="font-size: 20px; padding-left: 25px">
-            This is my personal project I made during learning Angular.js
+            This is my personal project I made during learning Angular.js and improving my knowledge of Spring Boot and Hibernate.
+            It's online store/price comparator. It provides functionality for ordinary users to
+            compare the prices, make orders, write reviews. Store owners/manager can see the orders waiting for further processing, check storage statuses,
+            add/edit/delete items from their offer. Feel free to checkout the whole functionality using sample credentials I provided.
         </p>
         <h1 class="price teal-text" style="">
             Under the hood
@@ -98,7 +101,7 @@
                 <li>james : bond</li>
                 <li>user : user</li>
                 <li>aston : martin</li>
-                <li>james : bond</li>
+                <li>john : doe</li>
             </ul>
 
         </div>
