--- a/templates/user.html
+++ b/templates/user.html
@@ -26,7 +26,7 @@
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
-                        <a href="/#/store/manager/Apple" class="md-button md-ink-ripple side-nav-element">
+                        <a access="ROLE_MANAGER" href="/#/store/manager/Apple" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>store_mall_directory</md-icon>
                             Store manager
                         </a>
